--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
-.App {
+body {
+  font-family: arial, sans-serif;
+}
+.form-control {
+  background-color: #e8e5ec;
+}
+h1 {
+  color: #535353;
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 28px;
+  margin-bottom: 0px;
+  margin-top: 50px;
+}
+li {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+  color: rgb(112, 117, 122);
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+}
+li::first-letter {
+  text-transform: capitalize;
+}
+ul {
+  margin: 0px;
+  padding: 0px;
+}
+.weather-app-wrap {
+  max-width: 600px;
+  margin: 30px auto;
+}
+.weather-app {
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 8px;
+  background: linear-gradient(
+    70deg,
+    rgb(112, 206, 220) 35.6%,
+    rgb(200, 242, 84) 99.2%
+  );
+}
+.overview {
+  margin-bottom: 20px;
+}
+.weather-temperature img {
+  margin-right: 5px;
+  height: 64px;
+  width: 64px;
+}
+.weather-temperature strong {
+  color: rgb(32, 33, 36);
+  font-size: 64px;
+  font-weight: 400;
+  line-height: 1;
+}
+.weather-temperature .units {
+  position: relative;
+  font-size: 16px;
+  top: -34px;
+}
+a {
+  text-decoration: none;
+}
+.weather-temperature .active {
+  color: rgb(32, 33, 36);
+  cursor: default;
+}
+.weather-temperature .active:hover {
+  text-decoration: none;
+}
+.weather-forecast {
+  margin-top: 20px;
   text-align: center;
+  color: #000;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.weather-forecast-date {
+  color: #535353;
+  font-size: 15px;
+  margin-top: 20px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.weather-forecast-temperature-min {
+  opacity: 0.5;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.weather-forecast-temperature {
+  font-size: 13px;
 }
